syntax = "proto3";

message TextRequest
{
    string text = 1;
}

message LableResponse
{
    string label = 1;
    float score = 2;
}

service LableService
{
    rpc SendLable(stream TextRequest) returns (stream LableResponse);
}
